fix: 375 is too small for iphones (15)

--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ button[type='submit']:hover {
   opacity: 0.3;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 500px) {
   .main-container {
     /* shift everything down a bit */
     margin-top: 50px;
